--- a/src/app/webviewer-main/study-table/study-table.component.html
+++ b/src/app/webviewer-main/study-table/study-table.component.html
@@ -7,11 +7,16 @@
 <section style="background-color: black;" class="worklist-study-list mat-elevation-z8">
     <table mat-table matSort [dataSource]="dataSource" class="mat-cell" aria-label="Elements" class="mat-elevation-z8">
         <ng-container matColumnDef="status">
-            <th mat-header-cell *matHeaderCellDef id="status" mat-sort-header>Status</th>
+            <th mat-header-cell *matHeaderCellDef id="status" mat-sort-header>
+                Status
+            </th>
             <td mat-cell *matCellDef="let element">{{element.status}}</td>
         </ng-container>
         <ng-container matColumnDef="patient_id">
-            <th mat-header-cell *matHeaderCellDef id="patient_id" mat-sort-header>Patient ID</th>
+            <th mat-header-cell *matHeaderCellDef id="patient_id" mat-sort-header>
+                Patient ID
+                <!-- <button mat-icon-button class="filter-icon-btn"><span class="material-icons filter-icon">filter_alt</span></button> -->
+            </th>
             <td mat-cell *matCellDef="let element">{{element.patient_id}}</td>
         </ng-container>
         <ng-container matColumnDef="patient_name">
