--- a/src/app/webviewer-main/header/toolbar/toolbar-users/users-dialog/new-user-dialog.component.html
+++ b/src/app/webviewer-main/header/toolbar/toolbar-users/users-dialog/new-user-dialog.component.html
@@ -58,7 +58,7 @@
                     </div>
 
                     <h5>Confirm Password *</h5>
-                    <input class="userinfo" id="pwdConfirmInput" [type]="fieldTextType ? 'text' : 'password'" formControlName="confirmPassword" placeholder="Re-enter your password"
+                    <input class="userinfo" id="pwdConfirmInput" type="password" formControlName="confirmPassword" placeholder="Re-enter your password"
                         [class.error]="(createUserForm.get('passwordGroup.confirmPassword').dirty || 
                         createUserForm.get('passwordGroup.confirmPassword').touched) && (createUserForm.get('passwordGroup.confirmPassword').errors?.required || createUserForm.controls.passwordGroup.errors?.passwordMismatch)"/>
                     <div *ngIf="createUserForm.get('passwordGroup.confirmPassword').errors?.required && (createUserForm.get('passwordGroup.confirmPassword').dirty || createUserForm.get('passwordGroup.confirmPassword').touched)" class="form-error-msg">
@@ -108,14 +108,13 @@
                 </div>
                 
                 <!-- userpassword field -->
-                <h5>User Password *</h5>
+                <!-- <h5>User Password *</h5>
                 <input class="userinfo" id="pwdInput" [type]="fieldTextType ? 'text' : 'password'" formControlName="password" placeholder="At least 8 characters" [class.error]="(password.dirty || password.touched) && (password.errors?.required || password.errors?.minlength || password.errors?.pattern)" />
                 <button type="button" mat-icon-button matSuffix (click)="togglePwdHide()" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="fieldTextType" [style.color]="'#0094d2'" [style.background]="'#2B2B2B'" [style.border]="'none'">
                     <mat-icon>{{fieldTextType ? 'visibility' : 'visibility_off'}}</mat-icon>
                 </button>
                 <div *ngIf="password.errors?.required && (password.dirty || password.touched)" class="form-error-msg">
                     <div *ngIf="password.errors.required">
-                        <!-- <span class="material-icons">warning_amber</span> -->
                         <span class="material-icons">priority_high</span>
                         Password is required.
                     </div>
@@ -128,6 +127,46 @@
                     <div *ngIf="password.errors.pattern">
                         <span class="material-icons">priority_high</span>
                         Password is a combination of uppercase, lowercase, numeric and non-alphanumeric characters
+                    </div>
+                </div> -->
+                <div formGroupName="passwordGroup">
+                    <!-- userpassword field -->
+                    <h5>User Password *</h5>
+                    <input class="userinfo" id="pwdInput" [type]="fieldTextType ? 'text' : 'password'" formControlName="password" placeholder="At least 8 characters" [class.error]="(updatePersonalForm.get('passwordGroup.password').dirty || 
+                    updatePersonalForm.get('passwordGroup.password').touched) && (updatePersonalForm.get('passwordGroup.password').errors)"/>
+                    <button matSuffix (click)="togglePwdHide()" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="fieldTextType" [style.color]="'#0094d2'" [style.background]="'#2B2B2B'" [style.border]="'none'" type="button">
+                        <mat-icon>{{fieldTextType ? 'visibility' : 'visibility_off'}}</mat-icon>
+                    </button>
+                    <div *ngIf="updatePersonalForm.get('passwordGroup.password').errors?.required && (updatePersonalForm.get('passwordGroup.password').dirty || updatePersonalForm.get('passwordGroup.password').touched)" class="form-error-msg">
+                        <div *ngIf="updatePersonalForm.get('passwordGroup.password').errors?.required">
+                            <span class="material-icons">priority_high</span>
+                            Password is required.
+                        </div>
+                    </div>
+                    <div *ngIf="updatePersonalForm.get('passwordGroup.password').errors?.minlength || updatePersonalForm.get('passwordGroup.password').errors?.pattern && (updatePersonalForm.get('passwordGroup.password').dirty || updatePersonalForm.get('passwordGroup.password').touched)" class="form-error-msg">
+                        <div *ngIf="updatePersonalForm.get('passwordGroup.password').errors.minlength">
+                            <span class="material-icons">priority_high</span>
+                            Password must be at least 8 characters
+                        </div>
+                        <div *ngIf="updatePersonalForm.get('passwordGroup.password').errors.pattern">
+                            <span class="material-icons">priority_high</span>
+                            Password is a combination of uppercase, lowercase, numeric and non-alphanumeric characters
+                        </div>
+                    </div>
+
+                    <h5>Confirm Password *</h5>
+                    <input class="userinfo" id="pwdConfirmInput" type="password" formControlName="confirmPassword" placeholder="Re-enter your password"
+                        [class.error]="(updatePersonalForm.get('passwordGroup.confirmPassword').dirty || 
+                        updatePersonalForm.get('passwordGroup.confirmPassword').touched) && (updatePersonalForm.get('passwordGroup.confirmPassword').errors?.required || updatePersonalForm.controls.passwordGroup.errors?.passwordMismatch)"/>
+                    <div *ngIf="updatePersonalForm.get('passwordGroup.confirmPassword').errors?.required && (updatePersonalForm.get('passwordGroup.confirmPassword').dirty || updatePersonalForm.get('passwordGroup.confirmPassword').touched)" class="form-error-msg">
+                        <div *ngIf="updatePersonalForm.get('passwordGroup.confirmPassword').errors.required">
+                            <span class="material-icons">priority_high</span>
+                            Re-enter your password
+                        </div>
+                    </div>
+                    <div *ngIf="updatePersonalForm.controls.passwordGroup.errors?.passwordMismatch" class="form-error-msg">
+                        <span class="material-icons">priority_high</span>
+                        Password does not match
                     </div>
                 </div>
             </div>
