--- a/src/app/webviewer-main/report-image-list/report-image-list.component.css
+++ b/src/app/webviewer-main/report-image-list/report-image-list.component.css
@@ -77,6 +77,17 @@ img{
 }
 .img-btn-container .blankbox {
     height: 2.25vw;
+    margin-right: 1.8rem;
+    display: flex;
+    align-items: center;
+}
+.img-btn-container .blankbox .tag{
+    font-size: 1.2rem;
+    
+}
+.img-btn-container .blankbox .confirm-user-name{
+    padding-left: 5px;
+    margin-right: 1px;
 }
 
 .img-btn-container{
