--- a/src/app/webviewer-main/report-image-list/report-image-list.component.css
+++ b/src/app/webviewer-main/report-image-list/report-image-list.component.css
@@ -83,6 +83,46 @@ img{
     /* justify-content: flex-end; */
 }
 
+.loading span {
+    display: inline-block;
+    width: 8px;
+    height: 8px;
+    background-color: gray;
+    border-radius: 50%;
+    margin: 0 5px;
+    animation: loading 1s 0s linear infinite;
+    /* 이벤트명 반복시간 딜레이시간 이번트처리 부드럽게 이벤트무한반복 */
+    /* 밑에서 'loading'이라는 이름으로 @keyframes 정의 */
+}
+
+.loading span:nth-child(1) {
+    animation-delay: 0s;
+    background-color: white;
+}
+
+.loading span:nth-child(2) {
+    animation-delay: 0.2s;
+    background-color: gray;
+}
+
+.loading span:nth-child(3) {
+    animation-delay: 0.4s;
+    background-color: black;
+}
+
+/* @keyframe을 사용하여 이벤트를 만든다. */
+@keyframes loading {
+    0%,
+    100% {
+        opacity: 0;             /* 안보였다가 */
+        transform: scale(0.5);  /* transform의 scale로 요소를 확대 또는 축소할 수 있음 */
+    }
+    50% {
+        opacity: 1;             /* 보였다가 */
+        transform: scale(1.2); /* 1.2배 */
+    }
+}
+
 ::ng-deep snack-bar-container.custom-snackbar{
     display: flex;
     justify-content: center;
