--- a/src/app/webviewer-main/report-image-list/report-image-list.component.html
+++ b/src/app/webviewer-main/report-image-list/report-image-list.component.html
@@ -1,10 +1,18 @@
 <div class="img-btn-container">
-    <div class="btn-container2" *ngIf="studyStatus === 'ANALYZED'; else reviewedCase">
+    
+    <div class="btn-container2" *ngIf="studyStatus === 'ANALYZED'; else loadingCase">
         <button class="custom-btn" (click)="confirm()">
         <!-- <button class="custom-btn" #confirmButtonEl (click)="confirm()">     -->
             <i class="fa fa-check-circle" aria-hidden="true" style="color: green;"></i>&nbsp;Confirm
         </button>
     </div>
+    <ng-template #loadingCase>
+        <div class="blankbox loading" *ngIf="studyStatus === 'Loading'; else reviewedCase">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </ng-template>
     <ng-template #reviewedCase>
         <div class="blankbox" *ngIf="studyStatus === 'REVIEWED'; else receivedCase">
             <span class="material-icons-outlined tag">tag</span>
