--- a/src/app/webviewer-main/report-image-list/report-image-list.component.css
+++ b/src/app/webviewer-main/report-image-list/report-image-list.component.css
@@ -10,16 +10,22 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    /* max-width: 95%;
+    max-height: 95%;
+    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center; */
 }
 
-img{
+/* img{
     max-width: 95%;
     max-height: 95%;
     display: block;
     display: flex;
     justify-content: center;
     align-items: center;
-} 
+}  */
 
 .error-image{
     display: flex;
@@ -59,11 +65,11 @@ img{
     padding: 1rem 3.5rem 0 0;
 }
 .btn-container2{
-    padding: 0 1.8rem 0.5rem 0;
+    padding: 0 0.7rem 0.5rem 0;
 }
 .img-btn-container .blankbox {
     height: 2.25vw;
-    margin-right: 1.8rem;
+    margin-right: 0.7rem;
     display: flex;
     align-items: center;
 }
