--- a/src/app/webviewer-main/report-image-list/report-image-list.component.css
+++ b/src/app/webviewer-main/report-image-list/report-image-list.component.css
@@ -180,3 +180,46 @@
         font-size: 1.3vw;
     }
 }
+
+
+.spinner-box {
+    width: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
+    position: absolute;
+    top: 45%;
+    left: 75%;
+}
+
+.circle-border {
+    width: 80px;
+    height: 80px;
+    padding: 3px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    background: rgb(63,249,220);
+    background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
+    animation: spin .8s linear 0s infinite;
+    margin-bottom: 15px;
+}
+
+.circle-core {
+    width: 100%;
+    height: 100%;
+    background-color: #2B2B2B;
+    border-radius: 50%;
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0);
+    }
+    to{
+        transform: rotate(359deg);
+    }
+}
