--- a/src/app/webviewer-main/report-image-list/report-image-list.component.html
+++ b/src/app/webviewer-main/report-image-list/report-image-list.component.html
@@ -17,14 +17,11 @@
         <div class="blankbox" *ngIf="studyStatus === 'REVIEWED'; else receivedCase">
             <span class="material-icons-outlined tag">tag</span>
             Confirm user  :  <b class="confirm-user-name"> {{confirmedBy$ | async}}</b>
-            <!-- <div appHighlight>hello</div> -->
         </div>
     </ng-template>
     <ng-template #receivedCase>
         <div class="blankbox"></div>
     </ng-template>
-    <!-- <pre>{{studyStatus$ | async}}</pre> -->
-    <!-- <div class="report_image2"> -->
     <div id="dicomWrapper"
         class='report_image2'
         unselectable='on'
@@ -36,11 +33,12 @@
         </div>
 
     </div>
-    <!-- </div> -->
-    <!-- <div appCornerstone
-        [image]="imageData"
-        id="dicomImage"
-        class="report_image2"
-        >
-    </div> -->
+</div>
+<div *ngIf="isImageLoading" class="spinner-box">
+    <div class="circle-border">
+      <div class="circle-core"></div>
+    </div> 
+    <span style="font-weight: 700;">
+        Loading . . .
+    </span> 
 </div>
