--- a/src/app/webviewer-main/study-table/study-table.component.css
+++ b/src/app/webviewer-main/study-table/study-table.component.css
@@ -1,3 +1,31 @@
+.table-info-section {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    /* margin: 0.5rem 0 0.3rem 0; */
+}
+.table-info-section.filtering {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0.5rem 0 0.3rem 0;
+}
+.filter-section {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 0.5rem;
+}
+
+.filter-section .mat-chip-list {
+    margin-left: 0.5rem;
+}
+
+.filter-section .mat-chip-list .mat-chip {
+    min-height: 28px;
+    font-size: 13px;
+    animation: fadein 1s;
+}
 .mat-table {
     overflow: auto;
     table-layout: fixed;
@@ -132,13 +160,15 @@ table.mat-table {
     width: 22% !important;
 }
   
-
+.mat-paginator {
+    background-color: #2b2b2b;
+}
 ::ng-deep .mat-paginator-container {
     position: relative;
     bottom: 0px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: flex-end !important;
     min-height: fit-content !important;
     max-height: 30px !important;
     padding: 0 0px !important;
@@ -146,6 +176,7 @@ table.mat-table {
     width: 100%;
     background: #2b2b2b;
     color: lightgray;
+    float: right;
 }
 
 ::ng-deep .mat-paginator-range-label {
@@ -180,12 +211,15 @@ th.mat-header-cell:last-of-type, td.mat-cell:last-of-type, td.mat-footer-cell:la
     height: 15px;
     line-height: 15px;
     margin-left: 2px;
+    display: flex;
+    align-items: center;
     /* margin-bottom: 2px; */
 }
 
 .material-icons.filter-icon {
     font-size: small;
     color: gray;
+    /* color: rgb(0, 113, 219); */
 }
 
 ::ng-deep .mat-sort-header-container .mat-sort-header-arrow {
@@ -224,4 +258,22 @@ th.mat-header-cell:last-of-type, td.mat-cell:last-of-type, td.mat-footer-cell:la
 .filter-text-dialog .mat-dialog-content {
     margin: none;
     padding: none;
+}
+
+@keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeout {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
 }
